--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,9 @@ jobs:
     - uses: actions/setup-python@v5
       with:
         python-version: '3.12'
+        cache: 'pip'
+        cache-dependency-path: .github/etc/requirements.txt
+    - run: pip install -r .github/etc/requirements.txt
 
     - uses: hendrikmuhs/ccache-action@v1.2
 
