Lotsa CI tricks (coverage and test jobs, composite actions)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,33 +6,66 @@ on:
     - master
 
 jobs:
-  sanitize:
+  coverage:
     runs-on: ubuntu-22.04
-    steps:
 
+    steps:
     - uses: actions/checkout@v4
 
-    - uses: actions/setup-python@v5
-      with:
-        python-version: '3.12'
-        cache: 'pip'
-        cache-dependency-path: .github/etc/requirements.txt
-    - run: pip install -r .github/etc/requirements.txt
+    - uses: ./.github/actions/apt-install
 
-    - uses: awalsh128/cache-apt-pkgs-action@latest
-      with:
-        packages: ccache cmake
+    - uses: ./.github/actions/conan
 
     - uses: hendrikmuhs/ccache-action@v1.2
 
-    - name: Conan cache
-      uses: actions/cache@v4
-      with:
-        path: conan_cache_save.tgz
-        key: conan-coverage-${{ hashFiles('conan*.[pl][yo]*') }}
+    - name: Configure
+      env:
+        VERBOSE: "1"
+      run: >-
+           cmake -B build/coverage
+           -DCMAKE_TOOLCHAIN_FILE=conan/conan_toolchain.cmake
+           -DCMAKE_BUILD_TYPE=Release
+           -DGreeter_DEV=ON
+           -DUSE_COVERAGE=ON
+           -DUSE_CCACHE=ON
 
-    - name: Install dependencies
-      run: bash < .github/scripts/conan-ci-setup.sh
+    - name: Build
+      env:
+        VERBOSE: "1"
+      run: |
+           cmake --build build/coverage -j 2
+
+    - name: Test
+      working-directory: build/coverage
+      env:
+        VERBOSE: "1"
+      run: |
+           ctest --output-on-failure --no-tests=error -j 2
+           ./Greeter
+           ./Greeter -l martian || true
+           ./Greeter -l en
+           ./Greeter -l de
+           ./Greeter -l es
+           ./Greeter -l fr
+           ./Greeter --help
+           ./Greeter --version
+
+    - name: Collect code coverage
+      run: >-
+           bash <(curl -s https://codecov.io/bash)
+           || echo "Codecov did not collect coverage reports"
+
+  sanitize:
+    runs-on: ubuntu-22.04
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - uses: ./.github/actions/apt-install
+
+    - uses: ./.github/actions/conan
+
+    - uses: hendrikmuhs/ccache-action@v1.2
 
     - name: Configure
       env:
@@ -63,3 +96,84 @@ jobs:
         UBSAN_OPTIONS: "print_stacktrace=1:\
           halt_on_error=1"
       run: ctest --output-on-failure --no-tests=error -j 2
+
+  test:
+    strategy:
+      matrix:
+        os: [macos-14, ubuntu-22.04, windows-2022]
+
+    runs-on: ${{ matrix.os }}
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - uses: ./.github/actions/apt-install
+      if: matrix.os == 'ubuntu-22.04'
+
+    - uses: ./.github/actions/conan
+
+    - name: Setup MultiToolTask
+      if: matrix.os == 'windows-2022'
+      shell: pwsh
+      run: |
+        Add-Content "$env:GITHUB_ENV" 'UseMultiToolTask=true'
+        Add-Content "$env:GITHUB_ENV" 'EnforceProcessCountAcrossBuilds=true'
+
+    - name: Configure (windows-2022)
+      if: matrix.os == 'windows-2022'
+      shell: bash
+      env:
+        # cl.exe doesn't like newlines in its hefty flag lunch
+        LOTSAFLAGS: >-
+                 /sdl /guard:cf /utf-8 /diagnostics:caret /w14165
+                 /w44242 /w44254 /w44263 /w34265 /w34287 /w44296
+                 /w44365 /w44388 /w44464 /w14545 /w14546 /w14547
+                 /w14549 /w14555 /w34619 /w34640 /w24826 /w14905
+                 /w14906 /w14928 /w45038 /W4 /permissive-
+                 /volatile:iso /Zc:inline /Zc:preprocessor
+                 /Zc:enumTypes /Zc:lambda /Zc:__cplusplus
+                 /Zc:externConstexpr /Zc:throwingNew /EHsc
+      run: >-
+           cmake -B build
+           -G "Visual Studio 17 2022"
+           -DCMAKE_TOOLCHAIN_FILE="conan/conan_toolchain.cmake"
+           -DUSE_CCACHE=ON
+           -DCMAKE_CONFIGURATION_TYPES=Release
+           -DGreeter_DEV=ON
+           -DCMAKE_CXX_FLAGS="${LOTSAFLAGS}"
+           -DCMAKE_EXE_LINKER_FLAGS="/machine:x64 /guard:cf"
+
+    - name: Configure (macos-14)
+      if: matrix.os == 'macos-14'
+      run: >-
+           cmake -B build
+           -G "Xcode"
+           -DCMAKE_TOOLCHAIN_FILE=conan/conan_toolchain.cmake
+           -DUSE_CCACHE=ON
+           -DCMAKE_CONFIGURATION_TYPES=Release
+           -DGreeter_DEV=ON
+           -DCMAKE_CXX_FLAGS="-fstack-protector-strong -Wall -Wextra -Wpedantic
+                              -Wconversion -Wsign-conversion -Wcast-qual
+                              -Wformat=2 -Wundef -Werror=float-equal -Wshadow
+                              -Wcast-align -Wunused -Wnull-dereference
+                              -Wdouble-promotion -Wimplicit-fallthrough
+                              -Wextra-semi -Woverloaded-virtual
+                              -Wnon-virtual-dtor -Wold-style-cast"
+
+    - name: Configure (ubuntu-22.04)
+      if: matrix.os == 'ubuntu-22.04'
+      run: >-
+           cmake -B build
+           -G "Unix Makefiles"
+           -DCMAKE_TOOLCHAIN_FILE=conan/conan_toolchain.cmake
+           -DCMAKE_BUILD_TYPE=Release
+           -DUSE_CCACHE=ON
+           -DCMAKE_CONFIGURATION_TYPES=Release
+           -DGreeter_DEV=ON
+
+    - name: Build
+      run: cmake --build build --config Release -j 2
+
+    - name: Test
+      working-directory: build
+      run: ctest --output-on-failure --no-tests=error -C Release -j 2
