Revert "Try to comment out some tests"
This reverts commit 859061ba40bcdb5315160d235ae8945159a31bd5.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,14 +41,14 @@ jobs:
         VERBOSE: "1"
       run: |
            ctest --output-on-failure --no-tests=error -j 2
-           # ./Greeter
-           # ./Greeter -l martian || true
-           # ./Greeter -l en
-           # ./Greeter -l de
-           # ./Greeter -l es
-           # ./Greeter -l fr
-           # ./Greeter --help
-           # ./Greeter --version
+           ./Greeter
+           ./Greeter -l martian || true
+           ./Greeter -l en
+           ./Greeter -l de
+           ./Greeter -l es
+           ./Greeter -l fr
+           ./Greeter --help
+           ./Greeter --version
 
     - name: Process coverage info
       run: >-
