--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,9 +25,9 @@ jobs:
            cmake -B build/coverage
            -DCMAKE_TOOLCHAIN_FILE=conan/conan_toolchain.cmake
            -DCMAKE_BUILD_TYPE=Release
-           -DGreeter_DEV=ON
-           -DGreeter_USE_COVERAGE=ON
-           -DGreeter_USE_CCACHE=ON
+           -DLsPlex_DEV=ON
+           -DLsPlex_USE_COVERAGE=ON
+           -DLsPlex_USE_CCACHE=ON
 
     - name: Build
       env:
@@ -41,14 +41,14 @@ jobs:
         VERBOSE: "1"
       run: |
            ctest --output-on-failure --no-tests=error -j 2
-           ./greeter
-           ./greeter -l martian || true
-           ./greeter -l en
-           ./greeter -l de
-           ./greeter -l es
-           ./greeter -l fr
-           ./greeter --help
-           ./greeter --version
+           ./lsplex
+           ./lsplex -l martian || true
+           ./lsplex -l en
+           ./lsplex -l de
+           ./lsplex -l es
+           ./lsplex -l fr
+           ./lsplex --help
+           ./lsplex --version
 
     - name: Process coverage info
       run: >-
@@ -79,9 +79,9 @@ jobs:
            cmake -B build/sanitize
            -DCMAKE_TOOLCHAIN_FILE=conan/conan_toolchain.cmake
            -DCMAKE_BUILD_TYPE=Release
-           -DGreeter_DEV=ON
-           -DGreeter_USE_SANITIZER=Address,Undefined
-           -DGreeter_USE_CCACHE=ON
+           -DLsPlex_DEV=ON
+           -DLsPlex_USE_SANITIZER=Address,Undefined
+           -DLsPlex_USE_CCACHE=ON
 
     - name: Build
       env:
@@ -142,9 +142,9 @@ jobs:
            cmake -B build
            -G "Visual Studio 17 2022"
            -DCMAKE_TOOLCHAIN_FILE="conan/conan_toolchain.cmake"
-           -DGreeter_USE_CCACHE=ON
+           -DLsPlex_USE_CCACHE=ON
            -DCMAKE_CONFIGURATION_TYPES=Release
-           -DGreeter_DEV=ON
+           -DLsPlex_DEV=ON
            -DCMAKE_CXX_FLAGS="${LOTSAFLAGS}"
            -DCMAKE_EXE_LINKER_FLAGS="/machine:x64 /guard:cf"
 
@@ -154,9 +154,9 @@ jobs:
            cmake -B build
            -G "Xcode"
            -DCMAKE_TOOLCHAIN_FILE=conan/conan_toolchain.cmake
-           -DGreeter_USE_CCACHE=ON
+           -DLsPlex_USE_CCACHE=ON
            -DCMAKE_CONFIGURATION_TYPES=Release
-           -DGreeter_DEV=ON
+           -DLsPlex_DEV=ON
            -DCMAKE_CXX_FLAGS="-fstack-protector-strong -Wall -Wextra -Wpedantic
                               -Wconversion -Wsign-conversion -Wcast-qual
                               -Wformat=2 -Wundef -Werror=float-equal -Wshadow
@@ -172,9 +172,9 @@ jobs:
            -G "Unix Makefiles"
            -DCMAKE_TOOLCHAIN_FILE=conan/conan_toolchain.cmake
            -DCMAKE_BUILD_TYPE=Release
-           -DGreeter_USE_CCACHE=ON
+           -DLsPlex_USE_CCACHE=ON
            -DCMAKE_CONFIGURATION_TYPES=Release
-           -DGreeter_DEV=ON
+           -DLsPlex_DEV=ON
 
     - name: Build
       run: cmake --build build --config Release -j 2
@@ -219,8 +219,8 @@ jobs:
 
     - name: Build docs
       run: |
-        cmake -DGreeter_DOCS=SKIP_OTHER_TARGETS -S. -B /tmp/docbuild
-        cmake --build /tmp/docbuild --target GreeterDocs
+        cmake -DLsPlex_DOCS=SKIP_OTHER_TARGETS -S. -B /tmp/docbuild
+        cmake --build /tmp/docbuild --target LsPlexDocs
 
     - name: Deploy docs
       uses: peaceiris/actions-gh-pages@v4
